--- a/googlepage.css
+++ b/googlepage.css
@@ -1,3 +1,24 @@
+/* navigation bar*/
+nav {
+	position: absolute;
+	top: 0;
+	right:0;
+}
+
+nav li {
+	display: inline;
+	margin: 10px;
+}
+
+nav li:nth-child(5){
+	border:1px solid #0f66bd;
+	border-radius: 2px;
+	padding:5px 10px;
+	background-color: #0f66bd;
+	color:#ffffff;
+	}
+
+
 #search {
 	border: 1px solid #d1d1e0;
 	height: 40px;
