--- a/googlepage.css
+++ b/googlepage.css
@@ -1,4 +1,5 @@
 /* navigation bar*/
+
 nav {
 	position: absolute;
 	top: 0;
@@ -19,8 +20,37 @@ nav li:nth-child(5){
 	}
 
 
+
+
+/* content of the page*/
+#logo {
+	position: relative;
+	top: 100px;
+	left:500px;
+}
+
 #search {
 	border: 1px solid #d1d1e0;
 	height: 40px;
-	width: 500px;
+	width: 550px;
+	position: relative;
+	top:100px;
+	left: 450px;
+}
+
+#lucky {
+	position: relative;
+	top: 100px;
+	left: 500px;
+	margin-top: 50px;
+}
+
+#lucky li {
+	display: inline;
+	margin: 20px;
+	padding: 10px;
+	background-color: #efeff5;
+	border-radius: 2px;
+	color:#8282b0;
+
 }
