--- a/googlepage.css
+++ b/googlepage.css
@@ -1,6 +1,11 @@
 a {
 	text-decoration: none;
 }
+
+body {
+	font-family: arial, sans-serif;
+	font-size: small;
+}
 /* navigation bar*/
 
 nav {
@@ -12,18 +17,28 @@ nav {
 nav li {
 	display: inline;
 	margin: 10px;
+	font-weight: bold;
 }
 
+
+
+/* iniciar button*/
+
 nav li:nth-child(5){
-	border:1px solid #0f66bd;
+	border:1px solid #4285f4;
 	border-radius: 2px;
 	padding:5px 10px;
-	background-color: #0f66bd;
+	background-color: #4285f4;
 	color:#ffffff;
-	}
+}
 
+#btn a {
+	color: #ffffff;
+}
 
-
+#btn:active {
+	background-color: #0d59a5;
+}	
 
 /* content of the page*/
 #logo {
